--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
           package="android.itesm.edu.adoptappv1">
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
@@ -7,40 +8,36 @@
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <application
 
+    <application
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_heart_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme"
-    >
+            android:theme="@style/AppTheme">
+        <activity android:name=".ConfirmAct">
+        </activity>
         <activity android:name=".LoginActivity">
         </activity>
         <activity android:name=".RegisterActivity">
         </activity>
-
         <activity
                 android:name=".MainActivity"
                 android:theme="@style/AppTheme.NoActionBar">
-
         </activity>
         <activity android:name=".model.Paseadores.PaseadoresDetails"/>
         <activity android:name=".model.Adoptar.AdoptarDetails"/>
         <activity android:name=".model.Comida.ComidaDetails"/>
         <activity android:name=".model.Carrito.CarritoActivity"/>
         <activity android:name=".model.Extras.ExtrasDetails"/>
-        <activity android:name="SplashActivity">
+        <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-
-
-
     </application>
 
 </manifest>
